Upgraded to Java 8 except for snapshots