@@ -24,11 +24,11 @@ import io.reactivex.Single;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
-import javax.xml.bind.DatatypeConverter;
 import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
+import java.time.OffsetDateTime;
 import java.util.*;
 
 public final class SharedKeyCredentials implements ICredentials {
@@ -50,7 +50,7 @@ public final class SharedKeyCredentials implements ICredentials {
      */
     public SharedKeyCredentials(String accountName, String accountKey) throws InvalidKeyException {
         this.accountName = accountName;
-        this.accountKey = DatatypeConverter.parseBase64Binary(accountKey);
+        this.accountKey = Base64.getDecoder().decode(accountKey);
 
         try {
             this.hmacSha256 = Mac.getInstance("HmacSHA256");
@@ -98,7 +98,8 @@ public final class SharedKeyCredentials implements ICredentials {
         @Override
         public Single<HttpResponse> sendAsync(final HttpRequest request) {
             if (request.headers().value(Constants.HeaderConstants.DATE) == null) {
-                request.headers().set(Constants.HeaderConstants.DATE, Utility.RFC1123GMTDateFormat.format(new Date()));
+                request.headers().set(Constants.HeaderConstants.DATE,
+                        Utility.RFC1123GMTDateFormatter.format(OffsetDateTime.now()));
             }
             final String stringToSign = this.factory.buildStringToSign(request);
             try {
@@ -274,7 +275,7 @@ public final class SharedKeyCredentials implements ICredentials {
     String computeHmac256(final String stringToSign) throws InvalidKeyException {
         try {
             byte[] utf8Bytes = stringToSign.getBytes(Constants.UTF8_CHARSET);
-            return DatatypeConverter.printBase64Binary(this.hmacSha256.doFinal(utf8Bytes));
+            return Base64.getEncoder().encodeToString(this.hmacSha256.doFinal(utf8Bytes));
         }
         catch (final UnsupportedEncodingException e) {
             throw new Error(e);
